Some fixes for current code base state
* Fix `KafkaAdmin` to use `Collections.singletonMap()` instead of
`Map.of()` which is not available for Java 8 yet
* Fix `DefaultErrorHandlerNoSeeksRecordAckNoResumeTests` for the current `RecordInterceptor` lambda